arrumando o link do css

--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulário</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body" >
 
